yamls/jellyfin/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: jellyfin
  labels:
    app: jellyfin
spec:
  selector:
    matchLabels:
      app: jellyfin
  replicas: 1
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      containers:
        - name: jellyfin
          image: linuxserver/jellyfin 
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8096
              protocol: TCP
            - containerPort: 8920
              protocol: TCP
            - containerPort: 7359
              protocol: UDP
            - containerPort: 1900
              protocol: UDP
          volumeMounts:
            - mountPath: /data/media
              name: media
              readOnly: True
            - mountPath: /config
              name: jellyfin-config
      restartPolicy: Always
      volumes:
        - name: media
          hostPath:
            path: /mnt/media
        - name: jellyfin-config
          persistentVolumeClaim:
            claimName: jellyfin-config
