yamls/jellyfin/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
  namespace: jellyfin
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - host: jellyfin.legion.lan
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: jellyfin
            port:
              number: 8096
